objects/DMAPP__DM_Value_Map_Opportunity_Answer__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Unit_Solution_Opp__c</fullName>
        <label>Unit Solution Opp</label>
        <referenceTo>DMAPP__Unit_Solution_Opp__c</referenceTo>
        <relationshipLabel>Value Map Opportunity Answers</relationshipLabel>
        <relationshipName>Value_Map_Opportunity_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Map_Question_Option__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Value Map Question Option</label>
        <referenceTo>DMAPP__DM_Value_Map_Question_Option__c</referenceTo>
        <relationshipLabel>Value Map Opportunity Answers</relationshipLabel>
        <relationshipName>Value_Map_Opportunity_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Value Map Opportunity Answer</label>
    <nameField>
        <label>Value Map Opportunity Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Map Opportunity Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>